# vision-foundation-ft

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/api/: datasets.py  models.py  projects.py  training.py
backend/db/: database.py  models.py
backend/services/: job_runner.py  storage.py  websocket.py
core/: __init__.py  cli.py
core/data/: __init__.py  augmentations.py  dataset.py  formats.py  vqa_dataset.py
core/decoders/: __init__.py  base.py  classification.py  detection.py  rtdetr.py  segmentation.py  vlm.py
core/encoders/: __init__.py  base.py  dinov2.py  dinov3.py  lora.py
core/evaluation/: __init__.py  inference.py  metrics.py
core/export/: __init__.py  script_gen.py  weights.py
core/training/: __init__.py  callbacks.py  scheduler.py  trainer.py  vlm_trainer.py
docs/: architecture.md  getting-started.md  rtdetr.md  sdk-reference.md
examples/: classification_example.py  detection_e2e.py  detection_example.py  segmentation_example.py
experiments/: modal_train.py  modal_train_seg.py  modal_train_vlm.py  modal_utils.py  prepare_oxford_pets.py  prepare_oxford_pets_seg.py  prepare_retail_dataset.py  rerun_vits14_detection.py  run_benchmarks.py  run_dinov2_benchmarks.py  run_long_detection.py  run_new_datasets_fast.py  test_predictions_378.ipynb  test_seg_pets.ipynb  test_vlm_pets.ipynb  train_deim_pets.py  train_seg_pets.py  train_vlm_pets.py
frontend/: app.py
frontend/pages/: 1_Dataset.py  2_Model.py  3_Training.py  4_Results.py  (+1 more)
sdk/: __init__.py
tests/: conftest.py
(+12 files in other folders)
